--- a/app/globals.css
+++ b/app/globals.css
@@ -118,7 +118,7 @@ main {
 }
 
 h1 {
-    font-size: var(--fs-600);
+    font-size: 2.5rem;
     font-weight: var(--fw-600);
     text-transform: uppercase;
     letter-spacing: 3px;
@@ -152,7 +152,7 @@ h1 {
 
 .container-sub::after {
     content: attr(data-type);
-    color: var(--clr-primary-500);
+    color: #ffffff;
     text-transform: uppercase;
     font-weight: var(--fw-600);
     font-size: .7rem;
