--- a/app/globals.css
+++ b/app/globals.css
@@ -118,12 +118,12 @@ main {
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 1.8rem;
     font-weight: var(--fw-600);
     text-transform: uppercase;
     letter-spacing: 3px;
     text-align: center;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
 }
 
 .container {
@@ -346,6 +346,10 @@ footer a:hover svg {
 
     .logo-container svg {
         height: 50px;
+    }
+
+    h1 {
+        font-size: 2.5rem;
     }
 
     main {
