--- a/app/globals.css
+++ b/app/globals.css
@@ -65,9 +65,12 @@
     --sidebar-ring: oklch(0.708 0 0);
 }
 
+html,
 body {
     position: relative;
-    min-height: 100vh;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
     color: var(--clr-neutral-100);
     background: #1b4423;
 }
